Can now add tag exclusions (filters).

--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -860,11 +860,11 @@ en:
       failure: "Failed to stop following #%{name}. Maybe you already stopped following it?"
   tag_exclusions:
     create:
-      success: "You will no longer see posts or comments tagged #%{name}."
+      success: "You will no longer see posts tagged #%{name}."
       failure: "Failed to filter by #%{name}.  Are you already filtering by it?"
       none: "Please specify a hashtag to filter out."
     destroy:
-      success: "Posts and comments tagged #%{name} are no longer hidden from you."
+      success: "Posts tagged #%{name} are no longer hidden from you."
       failure: "Failed to remove filter on #%{name}. Maybe you already removed it?"
 
   tokens:
@@ -973,6 +973,7 @@ en:
     filters:
       title: 'Filters'
       tag_exclusions: 'Tags to Filter Out'
+      add: 'Add Filter'
       delete: 'Delete'
 
     destroy:
