--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -263,6 +263,9 @@ en:
       many_people_are_you_sure: "Are you sure you want to start a private conversation with more than %{suggested_limit} contacts? Posting to this aspect may be a better way to contact them."
     spotlight:
       community_spotlight: "Community Spotlight"
+    import:
+      imported: 'Imported %{num_added} out of %{num_in_file} contacts.'
+      already_added: '(%{num_already} have already been added.)'
 
   conversations:
     index:
