--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -322,6 +322,8 @@ en:
     show:
       edit_group: 'Edit Group'
       join_group: 'Join Group'
+      pending: '(membership request pending)'
+      private_membership: '(private membership)'
     create:
       already_exists: 'That group already exists.'
       failed: 'Failed to create group.'
