--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -364,6 +364,10 @@ en:
       success: 'You have accepted %{whom} into the group.'
     reject_request:
       success: 'You have rejected the request of %{whom}.'
+    list:
+      biggest: 'Biggest Groups'
+      newest: 'Newest Groups'
+      old: '%{age} old'
 
   home:
     show:
