Move Group Image uploader below main form.  Change hard-coded group ID to use actual group ID.

--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -341,6 +341,7 @@ en:
       name_label: 'Name (for example: The Toronto Cycling Club)'
       description_label: 'Description (include hashtags if you wish)'
       admission_label: 'Admission'
+      group_image: 'Group Image'
       submit: 'Update Group'
       cancel: 'Cancel'
       remove: 'remove'
