First stab at pod-only post scope.

--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -30,6 +30,7 @@ en:
   fill_me_out: "Fill me out"
   back: "Back"
   public: "Public"
+  pod_only: 'Pod Only'
   limited: "Limited"
   search: "Search"
   find_people: "Find people or #tags"
