--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -691,6 +691,9 @@ en:
       destroy: "Delete"
       permalink: "permalink"
       not_found: "Sorry, we couldn't find that post."
+    search:
+      posts: 'Your Posts'
+      comments: 'Your Comments'
 
   share_visibilites:
     update:
