--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -1066,6 +1066,9 @@ en:
 
     privacy_settings:
       title: "Privacy Settings"
+      chat: 'Chat'
+      chat_with_anyone: 'Receive chat messages from anyone, not just your contacts'
+      update: 'Update'
       ignored_users: "Ignored Users"
       stop_ignoring: "Stop ignoring"
 
