Chat statuses ("away", etc.)  Merely visual at this point.

--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -222,6 +222,13 @@ en:
     explanation: "Post to Diaspora from anywhere by bookmarking %{link}."
     explanation_link_text: "this link"
 
+  chat:
+    status:
+      offline: 'Offline'
+      away: 'Away'
+      dnd: 'Do Not Disturb'
+      online: 'Online'
+
   comments:
     zero: "no comments"
     one: "1 comment"
@@ -436,6 +443,7 @@ en:
       admin: "admin"
       view_all: "View all"
       recent_notifications: "Recent notifications"
+      status: 'Your status'
     application:
       powered_by: "POWERED BY DIASPORA*"
       whats_new: "what's new?"
