--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -901,6 +901,7 @@ en:
       all_contacts: "All contacts"
     stream_element:
       viewable_to_anyone: "This post is viewable to anyone on the web"
+      viewable_pod_only: "This post is viewable to all logged-in users of this pod"
       connect_to_comment: "Connect to this user to comment on their post"
       currently_unavailable: 'commenting currently unavailable'
       via: "via %{link}"
