Do a manual rebase of Fermionic Diaspora code on top of the latest Diaspora code.
Main changes:

	Allow postees to see who else received the post
	Allow a person to prevent personal content from showing in email notifications
	Increase maximum post size to 500,000 characters
	Add support for TOS and Privacy Policy

--- a/config/locales/devise/devise.en.yml
+++ b/config/locales/devise/devise.en.yml
@@ -34,6 +34,7 @@ en:
         change_password: "Change my password"
       new:
         forgot_password: "Forgot your password?"
+        forgot_password_spam: "PLEASE NOTE: The password-reset email frequently ends up in the Spam folder of some email providers (notably Gmail). If you haven't received your password-reset email in 15 minutes or so, please check your Spam folder."
         no_account: 'No account with this email exists.  If you are waiting for an invite, we are rolling them out as soon as possible'
         send_password_instructions: "Send me reset password instructions"
     confirmations:
