--- a/config/locales/diaspora/en.yml
+++ b/config/locales/diaspora/en.yml
@@ -44,6 +44,9 @@ en:
   no_results: "No Results Found"
   _contacts: "Contacts"
   welcome: "Welcome!"
+  agreement: 'By signing in to your account, you certify that you agree to the latest %{linktos} and %{linkpriv}.'
+  tos: 'terms of service'
+  privacy: 'privacy policy'
 
   #for reference translation, the real activerecord english transations are actually
   #in en-US, en-GB, and en-AU yml files
@@ -180,7 +183,7 @@ en:
       friends: "Friends"
     index:
       donate: "Donate"
-      keep_pod_running: "Keep %{pod} running fast and buy servers their coffee fix with a monthly donation!"
+      keep_pod_running: "Keep %{pod} running and help Zach with a one-time donation!"
       keep_diaspora_running: "Keep Diaspora development fast with a monthly donation!"
       no_tags: "+ Find a tag to follow"
       unfollow_tag: "Stop following #%{tag}"
@@ -539,17 +542,26 @@ en:
         sharing: "has started sharing with you!"
         view_profile: "View %{name}'s profile"
     comment_on_post:
+        silenced_subject: "%{name}'s post"
+        silenced: "%{name} has a new comment"
         reply: "Reply or view %{name}'s post >"
     mentioned:
         subject: "%{name} has mentioned you on Diaspora*"
         mentioned: "mentioned you in a post:"
+        silenced: "%{name} has mentioned you in a post."
     private_message:
+        silenced_subject: "%{name}'s private message"
+        silenced: "%{name} has sent you a private message."
         reply_to_or_view: "Reply to or view this conversation >"
     liked:
         liked: "%{name} liked your post"
+        silenced: "Click link below to see the post"
+        silenced_text: "Visit the Diaspora page to see the post"
         view_post: "View post >"
     reshared:
         reshared: "%{name} reshared your post"
+        silenced: "Click link below to see the post"
+        silenced_text: "Login to your account to see the post"
         view_post: "View post >"
     confirm_email:
         subject: "Please activate your new email address %{unconfirmed_email}"
@@ -883,6 +895,7 @@ en:
       unlike: "Unlike"
       dislike: "Dislike"
       shared_with: "Shared with: %{aspect_names}"
+      contacts_shared_with: "Shared with: %{contact_names}"
       nsfw: "This post has been flagged as NSFW by its author. %{link}"
       show: "show"
     footer:
@@ -1016,13 +1029,14 @@ en:
       your_email: "Your email"
       edit_account: "Edit account"
       receive_email_notifications: "Receive email notifications when..."
-      also_commented: "...someone also comments on your contact's post?"
+      also_commented: "...someone else comments on a post you commented on?"
       comment_on_post: "...someone comments on your post?"
       mentioned: "...you are mentioned in a post?"
       started_sharing: "...someone starts sharing with you?"
       private_message: "...you receive a private message?"
       liked: "...someone likes your post?"
       reshared: "...someone reshares your post?"
+      silenced: "Allow the text of your posts (or comments, messages, etc.) to be in email notifications?"
       change: "Change"
       email_awaiting_confirmation: "We have sent you an activation link to %{unconfirmed_email}. Until you follow this link and activate the new address, we will continue to use your original address %{email}."
       stream_preferences: "Stream Preferences"
